adding regression stuff

--- a/Website-Extra-Credit/DataModeling.Rmd
+++ b/Website-Extra-Credit/DataModeling.Rmd
@@ -5,7 +5,6 @@ output:
   html_document: 
     css: "styles.css"
 ---
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +16,7 @@ output:
         }
 
         #follow-image {
-            position: absolute;
+            position: fixed; /* Change from absolute to fixed */
             pointer-events: none;
             transition: transform 0.1s ease-out;
             width: 100px; /* Set the width of the image */
@@ -32,9 +31,13 @@ output:
         document.addEventListener('DOMContentLoaded', function () {
             const image = document.getElementById('follow-image');
 
+            // Get half of the image width and height
+            const halfWidth = image.width / 2;
+            const halfHeight = image.height / 2;
+
             document.addEventListener('mousemove', function (event) {
-                const x = event.clientX;
-                const y = event.clientY;
+                const x = event.clientX - halfWidth;
+                const y = event.clientY - halfHeight;
 
                 // Adjust the image position
                 const transformValue = `translate(${x}px, ${y}px)`;
