--- a/Website-Extra-Credit/DataModeling.Rmd
+++ b/Website-Extra-Credit/DataModeling.Rmd
@@ -12,7 +12,6 @@ output:
     <style>
         body {
             margin: 0;
-            overflow: hidden;
         }
 
         #follow-image {
@@ -46,4 +45,15 @@ output:
         });
     </script>
 </body>
+# Here is our data visualizations:
+
+## Dissolved Oxygen Levels over Time
+![](OxyVsTime.png)
+
+## Average Salamander Count Per Dissolved Oxygen Count
+![](AvgSalOxygen.png)
+## Average Salamander Count Over Time
+![](SalVsTime.png)
+## Average Flow Type Vs Salamander Count
+![](AvgFlowVsSal.png)
 </html>
