cleaning up the repo

--- a/DissolvedOxygenOverTime.Rmd
+++ b/DissolvedOxygenOverTime.Rmd
@@ -2,10 +2,16 @@
 title: "Dissolved Oxygen Analysis"
 author: "Group 7"
 date: "2023-10-04"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r}
+library(openxlsx)
+library(readxl)
+library(ggplot2)
+library(dplyr)
 library(openxlsx)
 
 data2 = read.xlsx("~/Data-Science-G7/Average Dissolved Oxygen Per Year.xlsx")
