--- a/SiteVsSalamander.Rmd
+++ b/SiteVsSalamander.Rmd
@@ -2,7 +2,9 @@
 title: "Barton Springs Dataset Test"
 author: "Group 7"
 date: "2023-10-04"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -16,6 +18,10 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r}
+library(openxlsx)
+library(readxl)
+library(ggplot2)
+library(dplyr)
 data = read.csv("~/Data-Science-G7/CopyOfBarton_Springs_Salamanders_DO_and_Flow.csv")
 ```
 
